// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`putExcalidrawContent test fixtures > bound-arrows.json 1`] = `
{
  "binding:8": {
    "fromId": "shape:7",
    "id": "binding:8",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": false,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "snap": "none",
      "terminal": "start",
    },
    "toId": "shape:5",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:9": {
    "fromId": "shape:7",
    "id": "binding:9",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": false,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "snap": "none",
      "terminal": "end",
    },
    "toId": "shape:6",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:5": {
    "id": "shape:5",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 116.80078125,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 149.70703125,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 337.298828125,
    "y": 319.130859375,
  },
  "shape:6": {
    "id": "shape:6",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 129.7109375,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 156.33984375,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 586.361328125,
    "y": 284.068359375,
  },
  "shape:7": {
    "id": "shape:7",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "color": "black",
      "dash": "draw",
      "elbowMidPoint": 0.5,
      "end": {
        "x": 77.18359375,
        "y": 13.573000528631098,
      },
      "fill": "none",
      "font": "draw",
      "kind": "arc",
      "labelColor": "black",
      "labelPosition": 0.5,
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "start": {
        "x": 0,
        "y": 0,
      },
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 496.384765625,
    "y": 347.4204623362487,
  },
}
`;

exports[`putExcalidrawContent test fixtures > bound-elbow-arrows.json 1`] = `
{
  "binding:7": {
    "fromId": "shape:6",
    "id": "binding:7",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": false,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "snap": "none",
      "terminal": "start",
    },
    "toId": "shape:5",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:8": {
    "fromId": "shape:6",
    "id": "binding:8",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": false,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "snap": "none",
      "terminal": "end",
    },
    "toId": "shape:4",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:4": {
    "id": "shape:4",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 229.46484375,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 206.46875,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 329.876953125,
    "y": 122.65625,
  },
  "shape:5": {
    "id": "shape:5",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "none",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 146.35546875,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 175.85546875,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 574.267578125,
    "y": 450.98828125,
  },
  "shape:6": {
    "id": "shape:6",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 19.412005026411514,
      "color": "black",
      "dash": "draw",
      "elbowMidPoint": 0.5,
      "end": {
        "x": -430.24609375,
        "y": -286.77734375,
      },
      "fill": "none",
      "font": "draw",
      "kind": "elbow",
      "labelColor": "black",
      "labelPosition": 0.5,
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "start": {
        "x": 0,
        "y": 0,
      },
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 755.123046875,
    "y": 524.066015625,
  },
}
`;

exports[`putExcalidrawContent test fixtures > image.json 1`] = `
{
  "asset:5": {
    "id": "asset:5",
    "meta": {},
    "props": {
      "fileSize": undefined,
      "h": 1,
      "isAnimated": false,
      "mimeType": "image/svg+xml",
      "name": "cbB-uDKihdtuW5FkgGUGi",
      "src": null,
      "w": 1,
    },
    "type": "image",
    "typeName": "asset",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:4": {
    "id": "shape:4",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "altText": "",
      "assetId": "asset:5",
      "crop": null,
      "flipX": false,
      "flipY": false,
      "h": 1,
      "playing": true,
      "url": "",
      "w": 1,
    },
    "rotation": 0,
    "type": "image",
    "typeName": "shape",
    "x": 539.5,
    "y": 359.5,
  },
}
`;

exports[`putExcalidrawContent test fixtures > line-drawing.json 1`] = `
{
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:10": {
    "id": "shape:10",
    "index": "a7",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 58.4181288842301,
          "y": 49.019965553677594,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 113.41874383007689,
          "y": 1.81555427976582,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "line",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 110.60463469644037,
    "y": 65.59154187758622,
  },
  "shape:11": {
    "id": "shape:11",
    "index": "a8",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 31.612003930040373,
          "y": -40.796572639443866,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "line",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 113.5949593925252,
    "y": 138.21371306821925,
  },
  "shape:12": {
    "id": "shape:12",
    "index": "a9",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 30.25172824363335,
          "y": 37.69945063278442,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "line",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 186.96471175717943,
    "y": 101.36864092003043,
  },
  "shape:13": {
    "id": "shape:13",
    "index": "aA",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "font": "draw",
      "geo": "ellipse",
      "growY": 0,
      "h": 10.466136436297347,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 10.466136436296892,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 129.93494791041803,
    "y": 58.329324758522944,
  },
  "shape:14": {
    "id": "shape:14",
    "index": "aB",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -19.22351590340213,
          "y": -0.1067973105746205,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -16.12639389674314,
          "y": 75.18530664442005,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 90.49945608315966,
          "y": 76.16754945288585,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": 92.1058024740646,
          "y": 53.02035135709548,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "line",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 128.65338018352395,
    "y": 64.73716339299062,
  },
  "shape:15": {
    "id": "shape:15",
    "index": "aC",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 8.650582156531073,
          "y": 11.213717610318326,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 17.941948176509413,
          "y": 16.446785828466545,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 23.602205636956114,
          "y": 12.388488026637333,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 86.14805057488866,
    "y": 83.53349005409564,
  },
  "shape:16": {
    "id": "shape:16",
    "index": "aD",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 7.216469749839689,
          "y": 6.750891056301498,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 16.52804362060033,
          "y": 7.332864423223327,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 24.559276084131398,
          "y": 1.862314774151855,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": 27.11995889859054,
          "y": -6.401707036148309,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 54.03295639352882,
    "y": 56.27102933726792,
  },
  "shape:17": {
    "id": "shape:17",
    "index": "aE",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "isClosed": false,
      "isComplete": false,
      "isPen": false,
      "scale": 1,
      "segments": [
        {
          "points": [
            {
              "x": 0,
              "y": 0,
              "z": 0.5,
            },
            {
              "x": 0.0001,
              "y": 0.0001,
              "z": 0.5,
            },
          ],
          "type": "free",
        },
      ],
      "size": "s",
    },
    "rotation": 0,
    "type": "draw",
    "typeName": "shape",
    "x": 52.02692266197482,
    "y": 46.16259638261863,
  },
  "shape:18": {
    "id": "shape:18",
    "index": "aF",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "isClosed": false,
      "isComplete": false,
      "isPen": false,
      "scale": 1,
      "segments": [
        {
          "points": [
            {
              "x": 0,
              "y": 0,
              "z": 0.5,
            },
            {
              "x": 0.0001,
              "y": 0.0001,
              "z": 0.5,
            },
          ],
          "type": "free",
        },
      ],
      "size": "s",
    },
    "rotation": 0,
    "type": "draw",
    "typeName": "shape",
    "x": 78.65118398409231,
    "y": 41.68884755390218,
  },
  "shape:19": {
    "id": "shape:19",
    "index": "aG",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -3.1163746362394704,
          "y": 39.21438083934686,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 39.883171982572094,
    "y": 176.46580455986418,
  },
  "shape:20": {
    "id": "shape:20",
    "index": "aH",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 0.6492447158830146,
          "y": 15.84157106755083,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -2.8566767498859917,
          "y": 38.824834009817096,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 75.80724126246832,
    "y": 177.5045961052772,
  },
  "shape:21": {
    "id": "shape:21",
    "index": "aI",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 9.089426022365842,
          "y": -1.298489431766484,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 9.608821795072345,
          "y": 2.4671299203562285,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -0.12984894317651197,
          "y": 1.8178852044727591,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 37.34235608370864,
    "y": 214.12199808109153,
  },
  "shape:22": {
    "id": "shape:22",
    "index": "aJ",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 8.430521318774026,
          "y": -2.9007647299208656,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 10.897651239130028,
          "y": -0.044087980034646534,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 7.2618808301836,
          "y": 1.7737972244385674,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -0.5266407634876487,
          "y": 1.2616464425132108,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 73.78340613938462,
    "y": 215.3347265497157,
  },
  "shape:23": {
    "id": "shape:23",
    "index": "aK",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 12.281690716062712,
          "y": 25.097367984998527,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 19.75750245627478,
          "y": 52.7578714237834,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 20.611880940870833,
          "y": 73.36975236465446,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": 17.94194817650896,
          "y": 90.45732205656805,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 303.5237174377894,
    "y": 77.66713923173711,
  },
  "shape:24": {
    "id": "shape:24",
    "index": "aL",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -15.69920465444602,
          "y": 6.087446702744273,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -37.05866676933783,
          "y": 9.398163330552507,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -64.39877827639975,
          "y": 7.68940636136108,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -79.77759099912237,
          "y": 1.1747704163190065,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 321.4126626602406,
    "y": 171.47003964485634,
  },
  "shape:25": {
    "id": "shape:25",
    "index": "aM",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -1.1747704163190065,
          "y": -31.612003930040146,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 4.378689733552619,
          "y": -64.50557558697392,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 15.592407343870946,
          "y": -94.83601179012066,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 240.77742880243295,
    "y": 172.11082350830293,
  },
  "shape:26": {
    "id": "shape:26",
    "index": "aN",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 3.1163746362394704,
          "y": 39.21438083934686,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 298.23026501301365,
    "y": 179.77166449587958,
  },
  "shape:27": {
    "id": "shape:27",
    "index": "aO",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -0.6492447158830146,
          "y": 15.84157106755083,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 2.8566767498859917,
          "y": 38.824834009817096,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 262.6752860428437,
    "y": 179.60832515546895,
  },
  "shape:28": {
    "id": "shape:28",
    "index": "aP",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -9.648612435515133,
          "y": -1.777792071608701,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -10.168008208221636,
          "y": 1.9878272805140114,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 0.04996516986966526,
          "y": 1.0989312447093198,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 300.2777882573114,
    "y": 217.90545400466476,
  },
  "shape:29": {
    "id": "shape:29",
    "index": "aQ",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -7.880692400911357,
          "y": -2.9066419197561117,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -10.347822321267358,
          "y": -0.049965169869892634,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -6.712051912320931,
          "y": 1.7679200346033213,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": 0.8990705652308861,
          "y": 0.9092450946582176,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 264.20529297726443,
    "y": 218.3459309541106,
  },
  "shape:30": {
    "id": "shape:30",
    "index": "aR",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "font": "draw",
      "geo": "ellipse",
      "growY": 0,
      "h": 80.37089607781583,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 79.72274369009212,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 240.64516318993037,
    "y": 3.0383339498980604,
  },
  "shape:31": {
    "id": "shape:31",
    "index": "aS",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -7.216469749839689,
          "y": 6.750891056301498,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -16.52804362060033,
          "y": 7.332864423223327,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -24.559276084131398,
          "y": 1.862314774151855,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -27.11995889859054,
          "y": -6.401707036148309,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 284.4680954394512,
    "y": 58.29658530386632,
  },
  "shape:32": {
    "id": "shape:32",
    "index": "aT",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "isClosed": false,
      "isComplete": false,
      "isPen": false,
      "scale": 1,
      "segments": [
        {
          "points": [
            {
              "x": 0,
              "y": 0,
              "z": 0.5,
            },
            {
              "x": 0.0001,
              "y": 0.0001,
              "z": 0.5,
            },
          ],
          "type": "free",
        },
      ],
      "size": "s",
    },
    "rotation": 0,
    "type": "draw",
    "typeName": "shape",
    "x": 286.4850257957596,
    "y": 50.46690281164092,
  },
  "shape:33": {
    "id": "shape:33",
    "index": "aU",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "isClosed": false,
      "isComplete": false,
      "isPen": false,
      "scale": 1,
      "segments": [
        {
          "points": [
            {
              "x": 0,
              "y": 0,
              "z": 0.5,
            },
            {
              "x": 0.0001,
              "y": 0.0001,
              "z": 0.5,
            },
          ],
          "type": "free",
        },
      ],
      "size": "s",
    },
    "rotation": 0,
    "type": "draw",
    "typeName": "shape",
    "x": 261.71080446543874,
    "y": 42.44843104137681,
  },
  "shape:34": {
    "id": "shape:34",
    "index": "aV",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -6.440537200432573,
          "y": 13.16109775740506,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -19.741646636107816,
          "y": 24.502043697296813,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -40.883410054918386,
          "y": 32.76273271524269,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -62.16518515199914,
          "y": 30.662557541189017,
        },
        "a6": {
          "id": "a6",
          "index": "a6",
          "x": -68.74573403070144,
          "y": 25.20210208864819,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 294.7648277640651,
    "y": 89.96252332450558,
  },
  "shape:35": {
    "id": "shape:35",
    "index": "aW",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -8.82073573102707,
          "y": 9.520794122377993,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -20.02166999264864,
          "y": 11.900992652972946,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -28.422370688864703,
          "y": 8.260689017945879,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 253.04134763952607,
    "y": 84.6420795502363,
  },
  "shape:36": {
    "id": "shape:36",
    "index": "aX",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "font": "draw",
      "geo": "ellipse",
      "growY": 0,
      "h": 8.680724052756432,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 7.840653983134871,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 217.47838135887787,
    "y": 107.884018143101,
  },
  "shape:37": {
    "id": "shape:37",
    "index": "aY",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 4.211326988568544,
          "y": -40.29215551224979,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -79.55993418944263,
          "y": -42.45472883070397,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "line",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 221.5413287284482,
    "y": 107.06149549459315,
  },
  "shape:38": {
    "id": "shape:38",
    "index": "aY",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {},
    "rotation": 0,
    "type": "group",
    "typeName": "shape",
    "x": 377.74947728710913,
    "y": 249.93081594498142,
  },
  "shape:4": {
    "id": "shape:4",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "align": "middle",
      "color": "black",
      "dash": "solid",
      "fill": "none",
      "font": "draw",
      "geo": "ellipse",
      "growY": 0,
      "h": 80.37089607781583,
      "labelColor": "black",
      "richText": {
        "content": [
          {
            "type": "paragraph",
          },
        ],
        "type": "doc",
      },
      "scale": 1,
      "size": "m",
      "url": "",
      "verticalAlign": "middle",
      "w": 79.72274369009212,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 16.354966542628517,
    "y": 0,
  },
  "shape:5": {
    "id": "shape:5",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -12.281690716062712,
          "y": 25.097367984998527,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -19.75750245627478,
          "y": 52.7578714237834,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -20.611880940870833,
          "y": 73.36975236465446,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -17.94194817650896,
          "y": 90.45732205656805,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 34.35135494627548,
    "y": 76.16447562445728,
  },
  "shape:6": {
    "id": "shape:6",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 15.69920465444602,
          "y": 6.087446702744273,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": 37.05866676933783,
          "y": 9.398163330552507,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 64.39877827639975,
          "y": 7.68940636136108,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": 79.77759099912237,
          "y": 1.1747704163190065,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 16.836596012063637,
    "y": 167.26258154447237,
  },
  "shape:7": {
    "id": "shape:7",
    "index": "a4",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": 1.1747704163190065,
          "y": -31.612003930040146,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -4.378689733552619,
          "y": -64.50557558697392,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -15.592407343870946,
          "y": -94.83601179012066,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 96.93457894290896,
    "y": 167.90336540791895,
  },
  "shape:8": {
    "id": "shape:8",
    "index": "a5",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -14.097244995828532,
          "y": 5.980649392169653,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -26.058543780168293,
          "y": 14.310839616977773,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": -31.505206619465753,
          "y": 23.06821908408392,
        },
        "a5": {
          "id": "a5",
          "index": "a5",
          "x": -32.039193172337946,
          "y": 33.42755820980619,
        },
        "a6": {
          "id": "a6",
          "index": "a6",
          "x": -26.699327643615106,
          "y": 41.01016726059288,
        },
        "a7": {
          "id": "a7",
          "index": "a7",
          "x": -17.301164313062145,
          "y": 44.74807313069914,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 32.642597977083824,
    "y": 76.59166486675531,
  },
  "shape:9": {
    "id": "shape:9",
    "index": "a6",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "shape:38",
    "props": {
      "color": "black",
      "dash": "solid",
      "points": {
        "a1": {
          "id": "a1",
          "index": "a1",
          "x": 0,
          "y": 0,
        },
        "a2": {
          "id": "a2",
          "index": "a2",
          "x": -5.553460149871626,
          "y": 6.30104132389306,
        },
        "a3": {
          "id": "a3",
          "index": "a3",
          "x": -3.4175139383828537,
          "y": 9.718555262276368,
        },
        "a4": {
          "id": "a4",
          "index": "a4",
          "x": 0.42718924229802724,
          "y": 6.728230566191087,
        },
      },
      "scale": 1,
      "size": "m",
      "spline": "cubic",
    },
    "rotation": 0,
    "type": "line",
    "typeName": "shape",
    "x": 13.953068626553431,
    "y": 122.40771110319884,
  },
}
`;
